--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Softalyx - Atlassian Solutions Partner. Expert services for Jira, Confluence and more.">
-    <meta name="keywords" content="Atlassian partner, Jira, Confluence, Bitbucket, Atlassian licenses, Atlassian consulting">
-    <title>Softalyx - Your Atlassian Solutions Partner</title>
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <meta name="description" content="Softalyx - Expert services for Jira, Confluence and more.">
+    <meta name="keywords" content="Jira, Confluence, Bitbucket, Atlassian licenses, Atlassian consulting">
+    <title>Softalyx - Atlassian Services</title>
+    <link rel="icon" href="images/faviconsoftalyx.png" type="image/png" sizes="32x32">
+    <link rel="apple-touch-icon" href="images/faviconsoftalyx.png">
+    <meta name="msapplication-TileImage" content="images/faviconsoftalyx.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/dark-theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -28,6 +32,20 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <!-- Language Switcher -->
+            <div class="language-switcher">
+                <ul class="language-options">
+                    <li><a href="#" class="active" data-lang="en">EN</a></li>
+                    <li><a href="#" data-lang="ua">UA</a></li>
+                    <li><a href="#" data-lang="ru">RU</a></li>
+                </ul>
+            </div>
+            <!-- Theme Switcher -->
+            <div class="theme-switcher">
+                <button id="theme-toggle" aria-label="Toggle dark/light mode">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
             <div class="mobile-menu-toggle">
                 <i class="fas fa-bars"></i>
             </div>
@@ -54,31 +72,34 @@
         <div class="container">
             <div class="section-title">
                 <h2>Why Choose Softalyx</h2>
+                <p>Experience unmatched expertise and value with our Atlassian services</p>
             </div>
-            <div class="benefits-grid">
-                <div class="benefit-card">
-                    <div class="benefit-icon">
+            <div class="services-grid">
+                <!-- Temporarily hidden until certification is approved
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h3>Certified Partner</h3>
                     <p>Official Atlassian Solutions Partner with certified experts</p>
                 </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">
+                -->
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-users-cog"></i>
                     </div>
                     <h3>Agile Teams</h3>
                     <p>Dedicated development teams following agile methodologies</p>
                 </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-tags"></i>
                     </div>
                     <h3>Flexible Pricing</h3>
                     <p>Competitive rates and volume discounts on licenses</p>
                 </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-exchange-alt"></i>
                     </div>
                     <h3>Seamless Migration</h3>
@@ -124,7 +145,7 @@
         </div>
     </section>
 
-    <!-- Clients Section -->
+    <!-- Clients Section - Temporarily hidden
     <section class="clients">
         <div class="container">
             <div class="section-title">
@@ -132,22 +153,23 @@
             </div>
             <div class="client-logos">
                 <!-- Placeholder for client logos -->
-                <div class="client-logo">Client 1</div>
-                <div class="client-logo">Client 2</div>
-                <div class="client-logo">Client 3</div>
-                <div class="client-logo">Client 4</div>
-                <div class="client-logo">Client 5</div>
+                <!-- <div class="client-logo">Client 1</div> -->
+                <!-- <div class="client-logo">Client 2</div> -->
+                <!-- <div class="client-logo">Client 3</div> -->
+                <!-- <div class="client-logo">Client 4</div> -->
+                <!-- <div class="client-logo">Client 5</div> -->
             </div>
         </div>
     </section>
+    -->
 
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/logo.svg" alt="Softalyx Logo" width="150" height="42">
-                    <p>Your trusted Atlassian Solutions Partner</p>
+                    <img src="images/logo-white.svg" alt="Softalyx Logo" width="150" height="42" style="filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.5));">
+                    <p>Expert Atlassian Services</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
@@ -160,17 +182,16 @@
                 </div>
                 <div class="footer-contact">
                     <h4>Contact Us</h4>
-                    <p><i class="fas fa-envelope"></i> info@softalyx.com</p>
-                    <p><i class="fas fa-phone"></i> +1 (123) 456-7890</p>
+                    <p><i class="fas fa-envelope"></i> contact@softalyx.com</p>
+                    <p><i class="fas fa-phone"></i> +380660087119</p>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/company/softalyx" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://t.me/jkeeq" target="_blank"><i class="fab fa-telegram"></i></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Softalyx. All rights reserved.</p>
+                <p>&copy; 2025 Softalyx. All rights reserved. <a href="admin-login.html" style="color: rgba(255, 255, 255, 0.7); text-decoration: underline;">Admin</a></p>
             </div>
         </div>
     </footer>
@@ -187,12 +208,14 @@
             </div>
             <div class="chat-body">
                 <p>Connect with us on:</p>
-                <a href="#" class="chat-option"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                <a href="#" class="chat-option"><i class="fab fa-telegram"></i> Telegram</a>
+                <a href="https://t.me/jkeeq" class="chat-option" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
             </div>
         </div>
     </div>
 
     <script src="js/main.js"></script>
+    <script src="js/apply-admin-changes.js"></script>
+    <script src="js/language.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html> 
