--- a/licenses.html
+++ b/licenses.html
@@ -319,13 +319,13 @@
         <div class="container">
             <div class="quote-content">
                 <div class="quote-text">
-                    <h2>Ready to Get Started?</h2>
-                    <p>Contact our licensing team for a personalized quote tailored to your organization's needs.</p>
+                    <h2 data-i18n="get_started">Ready to Get Started?</h2>
+                    <p data-i18n="contact_licensing">Contact our licensing team for a personalized quote tailored to your organization's needs.</p>
                     <ul class="quote-features">
-                        <li><i class="fas fa-check"></i> Volume discounts available</li>
-                        <li><i class="fas fa-check"></i> Expert product selection advice</li>
-                        <li><i class="fas fa-check"></i> Fast license delivery</li>
-                        <li><i class="fas fa-check"></i> Dedicated account manager</li>
+                        <li><i class="fas fa-check"></i> <span data-i18n="volume_discounts_available_short">Volume discounts available</span></li>
+                        <li><i class="fas fa-check"></i> <span data-i18n="expert_guidance">Expert product selection advice</span></li>
+                        <li><i class="fas fa-check"></i> <span data-i18n="free_migration">Fast license delivery</span></li>
+                        <li><i class="fas fa-check"></i> <span data-i18n="expert_support">Dedicated account manager</span></li>
                     </ul>
                 </div>
                 <div class="quote-cta">
@@ -377,7 +377,7 @@
                             </div>
                             <div class="license-step">
                                 <div class="step-number">4</div>
-                                <div class="step-icon"><i class="fas fa-money-bill-wave"></i></div>
+                                <div class="step-icon"><i class="fas fa-coins"></i></div>
                                 <div class="step-content">
                                     <h4 data-i18n="step_payment">Post-Payment</h4>
                                     <p data-i18n="step_payment_desc">You pay us after receiving your license (post factum)</p>
@@ -397,7 +397,7 @@
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>How quickly can I get my license?</h3>
+                        <h3>How quickly can you respond to inquiries?</h3>
                         <span class="faq-toggle"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="faq-answer">
@@ -417,7 +417,7 @@
                     <p>Expert Atlassian Services</p>
                 </div>
                 <div class="footer-links">
-                    <h4>Quick Links</h4>
+                    <h4 data-i18n="quick_links">Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
@@ -431,7 +431,7 @@
                     <p><i class="fas fa-phone"></i> +380660087119</p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/company/softalyx" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://t.me/jkeeq" target="_blank"><i class="fab fa-telegram"></i></a>
+                        <a href="https://t.me/softalyxbot" target="_blank"><i class="fab fa-telegram"></i></a>
                     </div>
                 </div>
             </div>
@@ -453,7 +453,7 @@
             </div>
             <div class="chat-body">
                 <p>Connect with us on:</p>
-                <a href="https://t.me/jkeeq" class="chat-option" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+                <a href="https://t.me/softalyxbot" class="chat-option" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
             </div>
         </div>
     </div>
