Update URL structure to use /home instead of index.html

--- a/contact.html
+++ b/contact.html
@@ -70,13 +70,13 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <a href="index.html">
+                <a href="home">
                     <img src="images/logo.svg" alt="Softalyx Logo" width="180" height="50">
                 </a>
             </div>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="licenses.html">Licenses</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
@@ -268,7 +268,7 @@
                 <div class="footer-links">
                     <h4 data-i18n="quick_links">Quick Links</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home">Home</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="licenses.html">Licenses</a></li>
                         <li><a href="contact.html">Contact</a></li>
