--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -783,7 +783,7 @@
                 <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
                     <i class="fas fa-moon"></i>
                 </button>
-                <a href="index.html" class="btn btn-secondary" target="_blank">
+                <a href="home" class="btn btn-secondary" target="_blank">
                     <i class="fas fa-external-link-alt"></i> View Site
                 </a>
                 <a href="#" id="admin-logout" class="btn btn-primary">
