Fix GitHub Pages compatibility issues and add custom 404 page

--- a/admin-login.html
+++ b/admin-login.html
@@ -261,7 +261,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <a href="home">
+                <a href="index.html">
                     <img src="images/logo.svg" alt="Softalyx Logo" width="180" height="50">
                 </a>
             </div>
@@ -300,7 +300,7 @@
                 </div>
             </form>
             <div class="admin-login-footer">
-                <a href="home">Return to Website</a>
+                <a href="index.html">Return to Website</a>
             </div>
         </div>
     </div>
