--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="home" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="licenses.html">Licenses</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -288,7 +288,7 @@
                 <div class="footer-links">
                     <h4 data-i18n="quick_links">Quick Links</h4>
                     <ul>
-                        <li><a href="home">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="licenses.html">Licenses</a></li>
                         <li><a href="contact.html">Contact</a></li>
