--- a/services.html
+++ b/services.html
@@ -20,13 +20,13 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <a href="home">
+                <a href="index.html">
                     <img src="images/logo.svg" alt="Softalyx Logo" width="180" height="50">
                 </a>
             </div>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="services.html" class="active">Services</a></li>
                     <li><a href="licenses.html">Licenses</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -246,7 +246,7 @@
                 <div class="footer-links">
                     <h4 data-i18n="quick_links">Quick Links</h4>
                     <ul>
-                        <li><a href="home">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="licenses.html">Licenses</a></li>
                         <li><a href="contact.html">Contact</a></li>
