Add back Telegram contact card in contact page

--- a/contact.html
+++ b/contact.html
@@ -140,6 +140,14 @@
                     <p>Sofia, Bulgaria</p>
                     <p>Lviv, Ukraine</p>
                 </div>
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-comments"></i>
+                    </div>
+                    <h3 data-i18n="live_chat">Live Chat</h3>
+                    <p data-i18n="available_on_telegram">Available on Telegram</p>
+                    <p><a href="https://t.me/softalyxbot" target="_blank">@softalyxbot</a></p>
+                </div>
             </div>
         </div>
     </section>
