--- a/licenses.html
+++ b/licenses.html
@@ -401,7 +401,7 @@
                         <span class="faq-toggle"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="faq-answer">
-                        <p>Once the contract is signed, we can typically provide your license within 1-2 business days.</p>
+                        <p>Up to 2 business days</p>
                     </div>
                 </div>
             </div>
