Add new subject options for joining team and partnership requests with translations

--- a/contact.html
+++ b/contact.html
@@ -201,6 +201,8 @@
                                 <option value="services" data-i18n="services_info">Services Information</option>
                                 <option value="licenses" data-i18n="license_purchase">License Purchase</option>
                                 <option value="support" data-i18n="technical_support">Technical Support</option>
+                                <option value="join" data-i18n="join_team">I want to join Softalyx</option>
+                                <option value="partnership" data-i18n="partnership_request">Partnership request with Softalyx</option>
                             </select>
                         </div>
                     </div>
