--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                         <i class="fas fa-comments"></i>
                     </div>
                     <h3 data-i18n="live_chat">Live Chat</h3>
-                    <p data-i18n="available_on_telegram">Available on Telegram</p>
+                    <p data-i18n="available_on_telegram">Available on Telegram (currently incative, please write to @jkeeq)</p>
                     <p><a href="https://t.me/softalyxbot" target="_blank">@softalyxbot</a></p>
                 </div>
             </div>
